retrieveUnpackaged/objects/TQB_Bulletin_Board__c.object
<CustomObject>
    <description>The TQB bulletin board posts appear on the TQB application login page. The bulletin board posts are managed by the TQB application admin.</description>
    <fields>
        <fullName>BulletinBoardPostText__c</fullName>
        <label>BulletinBoardPostText</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LinkToOtherContent__c</fullName>
        <description>Users can optionally enter a URL that points to additional bulletin board content.</description>
        <inlineHelpText>Users can optionally enter a URL that points to additional bulletin board content.</inlineHelpText>
        <label>LinkToOtherContent</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PostDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>PostDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>TQB Bulletin Board</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TQB-BB-Post-{0000}</displayFormat>
        <label>TQB Bulletin Board Post</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TQB Bulletin Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>